<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="#607D8B"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <EditText
            android:id="@+id/num1"
            android:layout_width="353dp"
            android:layout_height="44dp"
            android:layout_margin="@dimen/fav_margin"
            android:background="@drawable/color_perron"
            android:hint="@string/numero_1"
            android:inputType="number"
            android:textColor="#FFF"
            android:textColorHint="#FFF"
            tools:targetApi="o"
            android:autofillHints="" />

        <EditText

            android:id="@+id/num2"
            android:layout_width="353dp"
            android:layout_height="44dp"
            android:layout_below="@+id/num1"
            android:layout_margin="@dimen/fav_margin"
            android:background="@drawable/color_perron"
            android:hint="@string/numero_2"
            android:inputType="number"
            android:textColor="#FFF"
            android:textColorHint="#FFF"
            tools:targetApi="o"
            android:autofillHints="" />

        <Button
            android:id="@+id/but1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/num2"
            android:layout_margin="@dimen/fav_margin"
            android:text="@string/suma"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/but2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/num2"
            android:layout_margin="@dimen/fav_margin"
            android:layout_toEndOf="@id/but1"
            android:text="@string/resta"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/but3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fav_margin"
            android:layout_below="@id/but1"
            android:text="@string/mult"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/but4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fav_margin"
            android:layout_below="@id/but2"
            android:layout_toEndOf="@id/but3"
            android:text="@string/division"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginRight="20dp"/>






    </RelativeLayout>

    <TextView
        android:id="@+id/resultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:gravity="center"
        android:textSize="50sp"/>



    <Button
        android:id="@+id/but5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fav_margin"
        android:layout_below="@id/but2"
        android:layout_toEndOf="@id/but2"
        android:text="@string/New"
        android:textSize="20sp"
        android:textStyle="bold" />



</android.support.v7.widget.LinearLayoutCompat>
